filled in form to create a course

--- a/app/views/courses/create_course.erb
+++ b/app/views/courses/create_course.erb
@@ -1,2 +1,4 @@
 <form method="post" action="/courses">
+  <input type="text" name="content">
+  <input type="submit" id="submit" value="post new course"
 </form>
