created form to delete course review on edit course page

--- a/app/views/courses/edit_course.erb
+++ b/app/views/courses/edit_course.erb
@@ -3,3 +3,8 @@
   <input type="hidden" name="_method" value="patch">
   <input type="submit" id="submit" value="Edit Course">
 </form>
+
+<form method="post" action="/courses/<%= @course.id %>">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Course">
+</form>
