--- a/app/views/courses/show_course.erb
+++ b/app/views/courses/show_course.erb
@@ -1,3 +1,3 @@
-<% @student.reviews.each do |t| %>
-  <p><%= t.content %></p><br></br>
+<% @student.courses.each do |t| %>
+  <p><%= t.review%></p><br></br>
 <% end %>
