--- a/app/views/courses/courses.erb
+++ b/app/views/courses/courses.erb
@@ -2,7 +2,7 @@
 
 <h6>Latest Reviews</h6>
 
-<% Student.all.each do |stud| %>
+<% Course.all.each do |stud| %>
   <% stud.courses.each do |course| %>
     <%= course.content %>
   <% end %>
